added json dependency, refactored model so that it serializes properly

--- a/Editor/com.pixelwizards.packageutil.asmdef
+++ b/Editor/com.pixelwizards.packageutil.asmdef
@@ -1,3 +1,15 @@
-﻿{
-	"name": "com.pixelwizards.packageutil"
+{
+    "name": "com.pixelwizards.packageutil",
+    "references": [],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": true,
+    "precompiledReferences": [
+        "Newtonsoft.Json.dll"
+    ],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
