update to 0.1.0-preview.9 - fixed asmdef to be editor only

--- a/Editor/com.pixelwizards.packageutil.asmdef
+++ b/Editor/com.pixelwizards.packageutil.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "com.pixelwizards.packageutil",
     "references": [],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": true,
